--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-de.netzwerk-universitaetsmedizin.ebm-cpg.json
-template = de.netzwerk-universitaetsmedizin.ceosys.template#0.1.0
+template = de.netzwerk-universitaetsmedizin.ceosys.template#current
