--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -88,6 +88,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false  # Do not store credentials as they will be configured manually
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -102,11 +103,17 @@ jobs:
       - name: Update sushi-config.yaml with new version
         run: |
           yq eval '.version = "${{ needs.check-release.outputs.new_release_version }}"' -i sushi-config.yaml
-
-      - name: Commit and push updated sushi-config.yaml
+  
+      - name: Configure git and push changes
+        env:
+          REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
         run: |
           git config user.name 'github-actions'
           git config user.email 'github-actions@github.com'
+          
+          # Inject the token directly into the remote URL securely
+          git remote set-url origin https://${{ github.actor }}:${REPO_ACCESS_TOKEN}@github.com/${{ github.repository }}.git
+
           git add sushi-config.yaml
           git commit -m "Update sushi-config.yaml for release ${{ needs.check-release.outputs.new_release_version }}"
           git push
