--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -950,11 +950,6 @@ definition:
     - https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/StructureDefinition/guideline-citation
     reference:
       reference: Citation/COVID19IntensiveCareTreatmentGuidelineCitation
-  - description: Ventilation Observables from SNOMED CT
-    isExample: false
-    name: Ventilation Observable SCT
-    reference:
-      reference: ValueSet/vs-ventilation-observable-sct
   - description: "Dieses ValueSet enth\xE4lt Codes f\xFCr die im Kontext einer Beatmung\
       \ eingestellten oder gemessenen Parametern."
     isExample: false
@@ -976,4 +971,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/de.netzwerk-universitaetsmedizin.ebm-cpg
-version: 0.8.0-snapshot
+version: 0.10.0
