--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -380,7 +380,7 @@ definition:
     name: Eligibility Criteria
     reference:
       reference: StructureDefinition/eligibility-criteria
-  - description: Episdoe Of Care Type
+  - description: Episode Of Care Type
     isExample: false
     name: Episode Of Care Type
     reference:
@@ -639,11 +639,6 @@ definition:
     name: Intervention Definition
     reference:
       reference: StructureDefinition/intervention-definition
-  - description: Klassifizierung eines Kontaktes mit einer Gesundheitseinrichtung
-    isExample: false
-    name: KontaktArtDe
-    reference:
-      reference: CodeSystem/KontaktArtDe
   - description: Mean difference types
     isExample: false
     name: Mean Difference Type
@@ -950,12 +945,6 @@ definition:
     - https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/StructureDefinition/guideline-citation
     reference:
       reference: Citation/COVID19IntensiveCareTreatmentGuidelineCitation
-  - description: "Dieses ValueSet enth\xE4lt Codes f\xFCr die im Kontext einer Beatmung\
-      \ eingestellten oder gemessenen Parametern."
-    isExample: false
-    name: VS MII ICU Code Observation Beatmung [LOINC]
-    reference:
-      reference: ValueSet/vs-mii-icu-code-observation-beatmung-loinc
 dependsOn:
 - id: hl7_fhir_uv_cpg
   packageId: hl7.fhir.uv.cpg
@@ -971,4 +960,4 @@ resourceType: ImplementationGuide
 status: draft
 title: Clinical Practice Guidelines (CPG) on EBMonFHIR
 url: https://www.netzwerk-universitaetsmedizin.de/fhir/cpg-on-ebm-on-fhir/ImplementationGuide/de.netzwerk-universitaetsmedizin.ebm-cpg
-version: 0.10.0
+version: 1.0.2
